--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
@@ -51,6 +51,9 @@
                                 <td>@gv.HocHam</td>
 
                                 <td>
+                                    <a href="@Url.Action("Details", new { id = gv.GiangVienId})" class="btn btn-sm btn-info">
+                                        <i class="fas fa-eye"></i>
+                                    </a>
                                     <a href="@Url.Action("Edit", new { id = gv.GiangVienId })" class="btn btn-sm btn-warning">
                                         <i class="fas fa-edit"></i>
                                     </a>
