--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -164,7 +164,9 @@
                             <a href="@Url.Action("BaoCaoLopHoc", "ThongKe")" class="nav-item nav-link">
                                 <i class="fas fa-check-circle me-2"></i>Thống kê lớp học
                             </a>
-
+                            <a href="@Url.Action("QuanLyHocTapTheoKhoaHoc", "QuanLyHocTap")" class="nav-item nav-link">
+                                <i class="fas fa-check-circle me-2"></i>Quản lý học tập
+                            </a>
                         }
 
 
