--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Edit.cshtml
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         @Html.LabelFor(model => model.MaLopHoc, "Mã Lớp Học", new { @class = "form-label" })
-                        @Html.TextBoxFor(model => model.MaLopHoc, new { @class = "form-control", required = "required" })
+                        @Html.TextBoxFor(model => model.MaLopHoc, new { @class = "form-control", @readonly = "readonly" })
                         @Html.ValidationMessageFor(model => model.MaLopHoc, "", new { @class = "text-danger", @readonly = "readonly" })
                     </div>
                     <div class="col-md-6 mb-3">
